apps/kubernetes/k3s/apps/mailrise/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailrise
  namespace: mailrise
spec:
  selector:
    app: mailrise
  ports:
    - name: smtp
      port: 8025
      targetPort: 8025
