apps/kubernetes/k3s/apps/mailrise/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mailrise
  namespace: mailrise
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mailrise.hughboi.vip`)
      kind: Rule
      services:
        - name: mailrise
          port: 8025
  tls:
    secretName: hughboi-tls
